--- a/1.11/conf/nginx.conf
+++ b/1.11/conf/nginx.conf
@@ -40,7 +40,7 @@ http {
 	ssl_session_timeout         5m;
 	ssl_session_cache           shared:SSL:50m;
 
-	ssl_dhparam                 /etc/nginx/base_config/dhparam.pem;
+	ssl_dhparam                 /etc/nginx/conf.d/dhparam.pem;
 
 	# intermediate configuration (see https://wiki.mozilla.org/Security/Server_Side_TLS)
 	ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
