--- a/1.11/conf/nginx.conf
+++ b/1.11/conf/nginx.conf
@@ -1,10 +1,12 @@
 # DO NOT EDIT - MAINTAINED BY ANSIBLE
 # https://github.com/ufirstgroup/ansible-nginx-base-config
 
-# based on default version from nginx 1.7.12 mainline ppa package
+# based on nginx.conf.dpkg-dist from nginx 1.11.5 mainline ppa package
 
-worker_processes 4;
+worker_processes auto;
 pid /run/nginx.pid;
+# see https://www.nginx.com/blog/dynamic-modules-nginx-1-9-11/
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
 	worker_connections 768;
@@ -41,9 +43,11 @@ http {
 
 	ssl_dhparam                 /etc/nginx/conf.d/dhparam.pem;
 
-	# intermediate configuration (see https://wiki.mozilla.org/Security/Server_Side_TLS)
+	# intermediate configuration
+	# see https://wiki.mozilla.org/Security/Server_Side_TLS
+	# and https://mozilla.github.io/server-side-tls/ssl-config-generator/
 	ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
-	ssl_ciphers                 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
+	ssl_ciphers                 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
 	ssl_prefer_server_ciphers   on;
 
 	# TODO: OCSP Stapling
