--- a/1.11/conf/fastcgi.conf
+++ b/1.11/conf/fastcgi.conf
@@ -24,6 +24,7 @@ fastcgi_param  SERVER_ADDR        $server_addr;
 fastcgi_param  SERVER_PORT        $server_port;
 fastcgi_param  SERVER_NAME        $server_name;
 fastcgi_param  REQUEST_ID         $request_id;
+fastcgi_param  HTTP_X_REQUEST_ID  $request_id;
 
 # https://httpoxy.org/
 # https://www.nginx.com/blog/mitigating-the-httpoxy-vulnerability-with-nginx/
