Allow to pass request_id from header or URL parameter and pass it to fastcgi

--- a/1.11/conf/request-id.conf
+++ b/1.11/conf/request-id.conf
@@ -1,2 +1,11 @@
+# default
+set $rid $request_id;
+
+# curl -H 'X-Request-Id: some-value-42' ....
+if ($http_x_request_id != '') { set $rid $http_x_request_id; }
+
+# curl http://someserver/?requestId=some-value-42
+if ($arg_requestId != '')     { set $rid $arg_requestId; }
+
 # add header to response
-add_header X-Request-ID $request_id always;
+add_header X-Request-Id $rid;
