--- a/1.11/conf/fastcgi.conf
+++ b/1.11/conf/fastcgi.conf
@@ -23,8 +23,8 @@ fastcgi_param  REMOTE_PORT        $remote_port;
 fastcgi_param  SERVER_ADDR        $server_addr;
 fastcgi_param  SERVER_PORT        $server_port;
 fastcgi_param  SERVER_NAME        $server_name;
-fastcgi_param  REQUEST_ID         $request_id;
-fastcgi_param  HTTP_X_REQUEST_ID  $request_id;
+fastcgi_param  REQUEST_ID         $rid;
+fastcgi_param  HTTP_X_REQUEST_ID  $rid;
 
 # https://httpoxy.org/
 # https://www.nginx.com/blog/mitigating-the-httpoxy-vulnerability-with-nginx/
