--- a/1.11/conf/log-formats.conf
+++ b/1.11/conf/log-formats.conf
@@ -10,7 +10,7 @@ log_format timing '$remote_addr [$time_iso8601] "$http_host" '
 
 log_format access_json '{ '
       '"timestamp": "$time_iso8601", '
-      '"request_id": "$request_id", '
+      '"request_id": "$rid", '
       '"context": "$log_context", '
       '"message": "$request", '
       '"http_status": "$status", '
@@ -28,7 +28,7 @@ log_format access_json '{ '
 # see https://support.cloudflare.com/hc/en-us/articles/200169746-Adding-the-CF-RAY-header-to-your-logs
 log_format cloudflare_json '{ '
       '"timestamp": "$time_iso8601", '
-      '"request_id": "$request_id", '
+      '"request_id": "$rid", '
       '"ray_id": "$http_cf_ray", '
       '"context": "$log_context", '
       '"message": "$request", '
